// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardProfile action - all fields 1`] = `
Object {
  "query": "mutation {
      upsertProfiles(
        subAdvertiserId: 1,
        externalProvider: \\"segmentio\\",
        profiles: [{testType:\\"PsAwlRv%\\",user_id:\\"PsAwlRv%\\"}]
      ) {
        success
      }
    }",
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: forwardProfile action - required fields 1`] = `
Object {
  "query": "mutation {
      upsertProfiles(
        subAdvertiserId: 1,
        externalProvider: \\"segmentio\\",
        profiles: [{user_id:\\"PsAwlRv%\\"}]
      ) {
        success
      }
    }",
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: postMessage action - all fields 1`] = `
Object {
  "query": "SwvXw&[MtMsswfq8J6",
  "variables": Object {
    "testType": "SwvXw&[MtMsswfq8J6",
  },
}
`;

exports[`Testing snapshot for actions-stackadapt-audiences destination: postMessage action - required fields 1`] = `Object {}`;
